[package]
name = "geo_points"
version = "0.1.0"
edition = "2021"

[dependencies]
geo-types = "0.7.13"
rand = "0.8"
geo = "0.28.0"
image = "0.25.2"
chrono = "0.4.38"
serde_json = "1.0.124"
serde = { version = "1.0.207", features = ["derive"] }
anyhow = "1.0.86"
quick-xml = { version = "0.36.1", features = ["serialize"] }
fast_poisson = "1.0.0"
geo-clipper = "0.8.0"
