[package]
name = "geo_points"
version = "0.1.0"
edition = "2021"

[dependencies]
geo-types = "0.7.13"
rand = "0.8"
geo = "0.28.0"
image = "0.25.2"
chrono = "0.4.38"
serde_json = "1.0.124"
serde = { version = "1.0.207", features = ["derive"] }
anyhow = "1.0.86"
quick-xml = { version = "0.36.1", features = ["serialize"] }
fast_poisson = "1.0.0"
geo-booleanop = "0.3.2"
rayon = "1.10.0"
geo-rasterize = "0.1.2"
proj4rs = "0.1.3"
geojson = "0.24.1"
web-sys = "0.3.70"
js-sys = "0.3.70"

# Include reqwest only for non-WASM builds
#[cfg(not(target_arch = "wasm32"))]
reqwest = { version = "0.12", features = ["blocking"] }

# Include the following only for WASM builds
#[cfg(target_arch = "wasm32")]
reqwest-wasm = "0.11.16"
#[cfg(target_arch = "wasm32")]
wasm-bindgen =  "0.2.93"
#[cfg(target_arch = "wasm32")]
futures = "0.3.30"
#[cfg(target_arch = "wasm32")]
wasm-bindgen-futures = "0.4.43"
#[cfg(target_arch = "wasm32")]
serde-wasm-bindgen = "0.6.5"

[lib]
name = "geo_points"
path = "src/lib.rs"

[profile.release]
debug = true